# light-event

./: .env.example  .gitignore  Makefile  PLAN.md  README.md  docker-compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  Платформа найма - standalone.html
apps/api/: Dockerfile  docker-entrypoint.sh  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 173366c76a8e_company_контакт_заявителя_фио_email_.py  17ece7973930_test_materials_возобновление_попытки.py  1b925d29c976_vacancy_table.py  2729e810ebe8_chat_треды_и_сообщения_по_заявкам.py  300ff0a7d34c_email_message_журнал_исходящих_писем_11_.py  33c7e12b7a0e_user_moderation_status_модерация_.py  3625d01a7b0e_test_description_создание_черновиком.py  397604d923e8_vacancy_required_test_uuids_гейт_.py  41a83b1a8550_заявка_организации_реквизиты_точка_на_.py  4770d223af01_user_email_как_логин_unique_phone_.py  4772d479214c_uuidv7_server_default_для_всех_pk.py  4fde2a25cb0e_user_experience_опыт_работы.py  6dc145e24b12_company_favorite_notification.py  764df088d728_service_price_per_company_worker_.py  866eb183761e_user_email_и_email_verified_at.py  8e2461fcb2e9_service_price_редактируемые_тарифы_услуг.py  965a994d7bda_account_ledger_entry_topup_request.py  97435f16d4ab_application_application_event_candidate_.py  9a65bc74bce9_complaint_жалобы_участников.py  9b05f3cfe2c9_review_отзывы_по_завершённым_заявкам.py  9e26d0763903_user_table.py  cb2f9d8e587a_vacancy_description_о_событии.py  (+9 more)
apps/api/app/: cli.py  main.py  models_registry.py
apps/api/tests/: conftest.py  helpers.py
(+246 files in other folders)
