[project]
name = "hotel-litestar"
version = "0.1.0"
description = "System provide api for hirng people at hotel industry"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "greenlet>=3.3.2",
    "litestar>=2.21.1",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "testcontainers>=4.14.2",
    "uuid7>=0.1.0",
    "uvicorn>=0.42.0",
]
