[project]
name = "light-event-api"
version = "0.1.0"
description = "light-event — API платформы найма временного персонала"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116",
    "uvicorn[standard]>=0.35",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.16",
    "pydantic-settings>=2.6",
    "redis>=5.2",
    "pyjwt>=2.13.0",
    "boto3>=1.43.39",
    "python-multipart>=0.0.32",
    "aiosmtplib>=5.1.2",
    "email-validator>=2.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "testcontainers[postgres,redis,minio]>=4.9",
    "httpx>=0.28",
    "asgi-lifespan>=2.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
